docs: small improvements

--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -1,5 +1,5 @@
 ---
-title: Configuation
+title: Configuration
 description: Nuxt Fonts works out of the box with zero config, but you can always add some configurations for finer-grained control.
 ---
 
@@ -17,9 +17,11 @@ export default defineNuxtConfig({
 This defines how fonts will be downloaded, including the weights, styles, subsets, etc. These options can be used as a default behaviour with [`defaults`](#defaults) or a separate behaviour for a specific font with [`families`](#families).
 
 ### `defaults`
+
 This defines the default font options for all fonts.
 
 Example of `defaults`:
+
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
   fonts: {
@@ -41,18 +43,22 @@ export default defineNuxtConfig({
 ```
 
 #### `styles`
+
 Default: `['normal', 'italic']`
 
 Defines the styles that should be downloaded for a font.
 
 #### `subsets`
+
 Default: `['cyrillic-ext', 'cyrillic', 'greek-ext', 'greek', 'vietnamese', 'latin-ext', 'latin']`
 
 Defines the subsets that should be downloaded for a font.
 
 #### `fallbacks`
+
 Default: 
-```json
+
+```ts
 {
   'serif': ['Times New Roman'],
   'sans-serif': ['Arial'],
@@ -75,122 +81,152 @@ Default:
   'fangsong': [],
 }
 ```
+
 If you use a generic font family like `Roboto, sans-serif`, we will 'translate' that generic family name into one or more font families when generating fallback metrics.
 You can customize which families we use. (One or two works best.)
 
 ### `families`
+
 This is an array which defines the font options for specific fonts. You can use any properties from [defaults](#defaults), while there are some additional properties:
 
 Example of `families`:
 
 ```ts [nuxt.config.ts]
-families: [
-  // do not resolve this font with any provider from `@nuxt/fonts`
-  { name: 'Custom Font', provider: 'none' },
-  // only resolve this font with the `google` provider
-  { name: 'My Font Family', provider: 'google' },
-  // specify specific font data - this will bypass any providers
-  { name: 'Other Font', src: 'url(https://example.com/font.woff2)', weight: 'bold' },
-]
+export default defineNuxtConfig({
+  fonts: {
+    families: [
+      // do not resolve this font with any provider from `@nuxt/fonts`
+      { name: 'Custom Font', provider: 'none' },
+      // only resolve this font with the `google` provider
+      { name: 'My Font Family', provider: 'google' },
+      // specify specific font data - this will bypass any providers
+      { name: 'Other Font', src: 'url(https://example.com/font.woff2)', weight: 'bold' },
+    ]
+  }
+})
 ```
 
 #### `name`
+
 Default: *None*
 
 Defines the name of the font that should be given the option. This is required for every item in the `families` array.
 
 #### `global`
+
 Default: `false`
 
 Defines whether to inject `@font-face` regardless of usage in project.
 
 #### `provider`
+
 Default: *None*
 
 Defines the provider that is used for the given font. You can choose any providers from `none`, `google`, `bunny`, `fontshare`, `fontsource`, `adobe`, `local`.
 
 #### `src`
+
 Default: *None*
 
 Defines the src that should be used for the given font. If this is defined, then no other providers will be used for the given font family.
 
 ## Provider Options
+
 Providers can have their own options. These options are passed directly to different font providers. Please refer to the provider documentation for more information.
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
-  google: {},
-  local: {},
-  adobe: {
-    id: [fontkitId1, fontkitId2],
+  fonts: {
+    google: {},
+    local: {},
+    adobe: {
+      id: [fontkitId1, fontkitId2],
+    }
   }
 })
 ```
 
 ## `providers`
+
 This defines the behavior of the providers used.
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
-  providers: {
-    // You can pass a new custom provider - see 'Writing a custom provider' below
-    // for what this file should look like
-    custom: '~/providers/custom',
-    // Or you can disable a built-in provider
-    google: false,
+  fonts: {
+    providers: {
+      // You can pass a new custom provider - see 'Writing a custom provider' below
+      // for what this file should look like
+      custom: '~/providers/custom',
+      // Or you can disable a built-in provider
+      google: false,
+    }
   }
 })
 ```
 
 ## `assets`
+
 This defines the behavior of the assets used.
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
-  assets: {
-    // The baseURL where font files are served.
-    prefix: '/_fonts/'
+  fonts: {
+    assets: {
+      // The baseURL where font files are served.
+      prefix: '/_fonts/'
+    }
   }
 })
 ```
 
 ## `priority`
+
 You can customize the order in which providers are checked.
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
-  priority: ['bunny', 'google'],
+  fonts: {
+    priority: ['bunny', 'google'],
+  }
 })
 ```
 
 ## `provider`
+
 In some cases you may wish to use only one font provider. This is equivalent to disabling all other font providers.
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
-  provider: 'google',
+  fonts: {
+    provider: 'google'
+  }
 })
 ```
 
 ## `devtools`
-Defines whether to enable devtools for Nuxt font.
+
+Defines whether to enable devtools for Nuxt font, default is `true`
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
-  devtools: true,
+  fonts: {
+    // Disable the Nuxt Devtools integration
+    devtools: false
+  }
 })
 ```
 
 ## `experimental`
+
 Defines whether to enable experimental features. All of them are `false` by default.
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
-  experimental: {
-    // Required for TailwindCSS v4. You can enable support for processing CSS variables for font family names. This may have a performance impact.
-    processCSSVariables: true,
-    // You can enable support for adding preload links to the initially rendered HTML.
-    addPreloadLinks: true
+  fonts: {
+    experimental: {
+      // Required for TailwindCSS v4. You can enable support for processing CSS variables for font family names. This may have a performance impact.
+      processCSSVariables: true
+    }
   }
 })
 ```
