docs: small tweaks

--- a/docs/content/1.get-started/1.installation.md
+++ b/docs/content/1.get-started/1.installation.md
@@ -3,13 +3,20 @@ title: Installation
 description: Get started with Nuxt Fonts right away.
 ---
 
-## Automatic Installation
-Add `@nuxt/fonts` dependency to your project:
+## Installation
+
+### Automatic Installation
+
+To get started, add `@nuxt/fonts` to your project:
+
 ```bash
 npx nuxi@latest module add fonts
 ```
 
-## Manual Installation
+### Manual Installation
+
+Or you can install it manually.
+
 ::code-group
   ```bash [pnpm]
   pnpm i @nuxt/fonts
@@ -22,7 +29,7 @@ npx nuxi@latest module add fonts
   ```
 ::
 
-Add it to `modules` in your `nuxt.config`:
+Then, add it to the `modules` in your `nuxt.config`:
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
@@ -32,31 +39,41 @@ export default defineNuxtConfig({
 })
 ```
 
-You can now start using by adding `font-family` declarations to your CSS now. ✨
+### Configuration
 
-::callout
-If you haven't done so, please add `.data` directory to your `.gitignore` file.
-::
+If you don't already have it in your `.gitignore`, go ahead and add the `.data` directory:
 
-## Configuration
-
-Nuxt Fonts works out of the box with zero configuration, but for a finer-grained control, please consider adding a `fonts` section in your `nuxt.config`:
-
-```ts [nuxt.config.ts]
-fonts: {
-  // Options
-}
+```ignore [.gitignore]
+.data
 ```
 
+You can now get started by adding a `font-family` declaration to your CSS. ✨
+
+```vue
+<template>
+  <div>
+    Hello Nuxt Fonts!
+  </div>
+</template>
+
+<style scoped>
+div {
+  font-family: Roboto, sans-serif;
+}
+</style>
+```
+
+That's it! Nuxt Fonts will detect this and you should immediately see the web font loaded in your browser. [Read more about how it works](#how-it-works).
+
 ::callout
-Checkout the [fonts configuration](/get-started/configuration) for all available options and features to customize.
+Check out the [configuration docs](/get-started/configuration) for all available options and features to customize.
 ::
 
-## Troubleshooting
+### Troubleshooting
 
 If an error occurs during installation:
 
-- Ensure that you are using LTS version of NodeJS ([NodeJS Download page](https://nodejs.org/en/download/))
+- Ensure that you are using the latest LTS version of Node.js ([release schedule](https://github.com/nodejs/release#release-schedule))
 
 - Try to upgrade to latest versions:
 
@@ -74,12 +91,12 @@ If an error occurs during installation:
     ```
   ::
 
-- Try recreating lock-file:
+- Try recreating your lock-file:
 
   ```bash
   npx nuxt@latest upgrade --force
   ```
 
-- Check your network connection. Your machine might be having a hard time communicating with the providers.
+- Check your network connection. Your machine might be having a hard time communicating with the font providers.
 
-- If none of the above worked, please [open an issue](https://github.com/nuxt/image/issues) and include error trace, OS, Node version and the package manager used for installing.
+- If none of the above worked, please [open an issue](https://github.com/nuxt/image/issues) and include the error trace, OS, Node version and the package manager used for installing.
