--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -3,10 +3,11 @@ title: Configuration
 description: Nuxt Fonts works out of the box with zero config, but you can always add some configurations for finer-grained control.
 ---
 
-To configure the fonts module and customize its behavior, you can use the `fonts` property in your `nuxt.config`:
+You do not need to configure Nuxt Fonts but you can do so for finer-grained control, with the `fonts` property in your `nuxt.config`:
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
+  modules: ['@nuxt/fonts'],
   fonts: {
     // Options
   }
@@ -14,7 +15,8 @@ export default defineNuxtConfig({
 ```
 
 ## Font options
-This defines how fonts will be downloaded, including the weights, styles, subsets, etc. These options can be used as a default behaviour with [`defaults`](#defaults) or a separate behaviour for a specific font with [`families`](#families).
+
+These options define how fonts will be downloaded, including the weights, styles, subsets, etc. These options can be used as a default behaviour with [`defaults`](#defaults) or a separate behaviour for a specific font with [`families`](#families).
 
 ### `defaults`
 
@@ -24,6 +26,7 @@ Example of `defaults`:
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
+  modules: ['@nuxt/fonts'],
   fonts: {
     defaults: {
       weights: [400],
@@ -93,6 +96,7 @@ Example of `families`:
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
+  modules: ['@nuxt/fonts'],
   fonts: {
     families: [
       // do not resolve this font with any provider from `@nuxt/fonts`
@@ -132,15 +136,16 @@ Defines the src that should be used for the given font. If this is defined, then
 
 ## Provider Options
 
-Providers can have their own options. These options are passed directly to different font providers. Please refer to the provider documentation for more information.
+Providers can have their own options. These options are passed directly to different font providers. Please refer to the [provider documentation](/providers) for more information.
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
+  modules: ['@nuxt/fonts'],
   fonts: {
     google: {},
     local: {},
     adobe: {
-      id: [fontkitId1, fontkitId2],
+      id: ['fontkitId1', 'fontkitId2'],
     }
   }
 })
@@ -152,9 +157,10 @@ This defines the behavior of the providers used.
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
+  modules: ['@nuxt/fonts'],
   fonts: {
     providers: {
-      // You can pass a new custom provider - see 'Writing a custom provider' below
+      // You can pass a new custom provider - see more in the providers documentation
       // for what this file should look like
       custom: '~/providers/custom',
       // Or you can disable a built-in provider
@@ -170,6 +176,7 @@ This defines the behavior of the assets used.
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
+  modules: ['@nuxt/fonts'],
   fonts: {
     assets: {
       // The baseURL where font files are served.
@@ -185,6 +192,7 @@ You can customize the order in which providers are checked.
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
+  modules: ['@nuxt/fonts'],
   fonts: {
     priority: ['bunny', 'google'],
   }
@@ -197,6 +205,7 @@ In some cases you may wish to use only one font provider. This is equivalent to 
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
+  modules: ['@nuxt/fonts'],
   fonts: {
     provider: 'google'
   }
@@ -209,6 +218,7 @@ Defines whether to enable devtools for Nuxt font, default is `true`
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
+  modules: ['@nuxt/fonts'],
   fonts: {
     // Disable the Nuxt Devtools integration
     devtools: false
@@ -222,6 +232,7 @@ Defines whether to enable experimental features. All of them are `false` by defa
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
+  modules: ['@nuxt/fonts'],
   fonts: {
     experimental: {
       // Required for TailwindCSS v4. You can enable support for processing CSS variables for font family names. This may have a performance impact.
