--- a/docs/content/1.get-started/3.usage.md
+++ b/docs/content/1.get-started/3.usage.md
@@ -6,9 +6,8 @@ description: Use Nuxt Fonts with any CSS framework or library.
 ## Pure CSS
 You can use Nuxt Fonts with pure CSS by adding `font-family` declarations to your CSS:
 
-```css
-/* assets/css/fonts.css */
-@font-face {
+```css [assets/css/fonts.css]
+div {
   font-family: 'Inter', sans-serif;
 }
 ```
@@ -31,6 +30,7 @@ export default {
 ```
 
 ### v4 (experimental)
+
 TailwindCSS v4 brings a [brand new way](https://tailwindcss.com/blog/tailwindcss-v4-alpha) for configuration. In v4 if you want to specify a font, you would use a CSS variable:
 
 ```css [main.css]
@@ -39,10 +39,11 @@ TailwindCSS v4 brings a [brand new way](https://tailwindcss.com/blog/tailwindcss
 }
 ```
 
-Also, as it uses CSS variables, you should use the `processCSSVariables` experimental feature to enable support for processing CSS variables for font family names:
+As it uses CSS variables, you should enable the Nuxt Fonts `processCSSVariables` experimental feature to enable support for processing CSS variables for font family names:
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
+  modules: ['@nuxt/fonts'],
   fonts: {
     experimental: {
       processCSSVariables: true,
