docs: two more links

--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -136,7 +136,7 @@ Defines the src that should be used for the given font. If this is defined, then
 
 ## Provider Options
 
-Providers can have their own options. These options are passed directly to different font providers. Please refer to the [provider documentation](/providers) for more information.
+Providers can have their own options. These options are passed directly to different font providers. Please refer to the [provider documentation](/get-started/providers) for more information.
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
