--- a/docs/content/1.get-started/1.installation.md
+++ b/docs/content/1.get-started/1.installation.md
@@ -99,4 +99,4 @@ If an error occurs during installation:
 
 - Check your network connection. Your machine might be having a hard time communicating with the font providers.
 
-- If none of the above worked, please [open an issue](https://github.com/nuxt/image/issues) and include the error trace, OS, Node version and the package manager used for installing.
+- If none of the above worked, please [open an issue](https://github.com/nuxt/fonts/issues) and include the error trace, OS, Node version and the package manager used for installing.
