docs: add docs for `addLocalFallbacks`

--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -241,3 +241,16 @@ export default defineNuxtConfig({
   }
 })
 ```
+
+## `addLocalFallbacks`
+
+Defines whether to enable adding local fallbacks. Default is `true`.
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  modules: ['@nuxt/fonts'],
+  fonts: {
+    addLocalFallbacks: false
+  }
+})
+```
