--- a/docs/content/1.get-started/3.usage.md
+++ b/docs/content/1.get-started/3.usage.md
@@ -29,6 +29,10 @@ export default {
 }
 ```
 
+::callout
+If the font name contains an invalid identifier (like a space character), you'll need to wrap it in quotes or escape the character manually. Read more [here](https://tailwindcss.com/docs/font-family#customizing-your-theme).
+::
+
 ### v4 (experimental)
 
 TailwindCSS v4 brings a [brand new way](https://tailwindcss.com/blog/tailwindcss-v4-alpha) for configuration. In v4 if you want to specify a font, you would use a CSS variable:
