docs: update docs

--- a/docs/content/1.get-started/4.providers.md
+++ b/docs/content/1.get-started/4.providers.md
@@ -17,6 +17,10 @@ Then, when you use a `font-family` in your CSS, we check to see whether it match
 
 [Google Fonts](https://fonts.google.com/) is one of the best known public font APIs.
 
+### `googleicons`
+
+[Google Fonts Icons](https://fonts.google.com/icons) adds support for Material Symbols and Material Icons.
+
 ### `bunny`
 
 [Bunny Fonts](https://fonts.bunny.net/) is provided by [bunny.net](https://bunny.net/) and is a drop-in Google Fonts compatible API, focusing on privacy.
