feat: allow experimentally disabling local fallbacks (#225)

--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -237,6 +237,8 @@ export default defineNuxtConfig({
     experimental: {
       // Required for TailwindCSS v4. You can enable support for processing CSS variables for font family names. This may have a performance impact.
       processCSSVariables: true
+      // Defines whether to enable adding local fallbacks. Default is `false`.
+      disableLocalFallbacks: true
     }
   }
 })
