--- a/docs/content/1.get-started/1.installation.md
+++ b/docs/content/1.get-started/1.installation.md
@@ -3,9 +3,7 @@ title: Installation
 description: Get started with Nuxt Fonts right away.
 ---
 
-## Installation
-
-### Automatic Installation
+## Automatic Installation
 
 To get started, add `@nuxt/fonts` to your project:
 
@@ -13,7 +11,7 @@ To get started, add `@nuxt/fonts` to your project:
 npx nuxi@latest module add fonts
 ```
 
-### Manual Installation
+## Manual Installation
 
 Or you can install it manually.
 
@@ -39,7 +37,7 @@ export default defineNuxtConfig({
 })
 ```
 
-### Configuration
+## Configuration
 
 If you don't already have it in your `.gitignore`, go ahead and add the `.data` directory:
 
@@ -69,7 +67,7 @@ That's it! Nuxt Fonts will detect this and you should immediately see the web fo
 Check out the [configuration docs](/get-started/configuration) for all available options and features to customize.
 ::
 
-### Troubleshooting
+## Troubleshooting
 
 If an error occurs during installation:
 
