--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -104,7 +104,7 @@ export default defineNuxtConfig({
       // only resolve this font with the `google` provider
       { name: 'My Font Family', provider: 'google' },
       // specify specific font data - this will bypass any providers
-      { name: 'Other Font', src: 'url(https://example.com/font.woff2)', weight: 'bold' },
+      { name: 'Other Font', src: 'https://example.com/font.woff2', weight: 'bold' },
     ]
   }
 })
