docs: add note about how how `font-family` declarations are handled
resolves https://github.com/nuxt/fonts/issues/172

--- a/docs/content/1.get-started/3.usage.md
+++ b/docs/content/1.get-started/3.usage.md
@@ -12,6 +12,10 @@ div {
 }
 ```
 
+::callout
+Note that Nuxt Fonts will only generate CSS for the first font in a `font-family` declaration. Subsequent fonts in the list will be used to generate metrics for font fallbacks.
+::
+
 ## Tailwind CSS
 
 ### v3 and below
