docs: update custom provider docs

--- a/docs/content/1.get-started/4.providers.md
+++ b/docs/content/1.get-started/4.providers.md
@@ -64,29 +64,29 @@ You should read [their terms in full](https://www.adobe.com/legal/terms.html) be
 
 ## Custom Providers
 
-The provider API is likely to evolve in the next few releases of Nuxt Fonts, but at the moment it looks like this:
+The core of the provider API in Nuxt Fonts has been extracted to a common library that can be used by any framework - [`unifont`](https://github.com/unjs/unifont).
+
+The provider API is likely to evolve in the next few releases of `unifont`, but at the moment it looks like this:
 
 ```ts
-import { defineFontProvider } from '@nuxt/fonts/utils'
+import { defineFontProvider } from 'unifont'
 
-export default defineFontProvider({
-  async setup () {
-    // do some setup
-  },
-  async resolveFontFaces (fontFamily, defaults) {
-    if (fontFamily === 'My Font Family') {
-      return {
-        fonts: [
-          {
-            src: [
-              { url: 'https://cdn.org/my-font.woff2', format: 'woff2' },
-              // this will be inferred as a `woff` format file
-              'https://cdn.org/my-font.woff',
-            ],
-            weight: 400,
-            style: 'normal',
-          }
-        ]
+export default defineFontProvider('some-custom-provider', async (options) => {
+  // do some setup
+  return {
+    async resolveFont (fontFamily, options) {
+      if (fontFamily === 'My Font Family') {
+        return {
+          fonts: [
+            {
+              src: [
+                { url: 'https://cdn.org/my-font.woff2', format: 'woff2' },
+              ],
+              weight: 400,
+              style: 'normal',
+            }
+          ]
+        }
       }
     }
   }
@@ -97,12 +97,14 @@ Module authors can also add their own providers (or remove existing ones) in the
 
 ```ts
 nuxt.hook('fonts:providers', providers => {
-  providers.push({
-    async setup () {
-      /** some setup */
-    },
-    async resolveFontFaces (fontFamily, defaults) {
-      /** resolve font faces */
+  delete providers.adobe
+
+  providers['custom-provider'] = defineFontProvider('custom-provider', async () => {
+    /** some setup */
+    return {
+      async resolveFont (fontFamily, options) {
+        /** resolve font faces */
+      }
     }
   })
 })
