Document weights property in defaults

--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -45,6 +45,12 @@ export default defineNuxtConfig({
 })
 ```
 
+#### `weights`
+
+Default: `[400]`
+
+Defines the font-weights that should be downloaded for a font.
+
 #### `styles`
 
 Default: `['normal', 'italic']`
