Callout limited default font-weights

--- a/docs/content/1.get-started/1.installation.md
+++ b/docs/content/1.get-started/1.installation.md
@@ -63,6 +63,10 @@ div {
 
 That's it! Nuxt Fonts will detect this and you should immediately see the web font loaded in your browser. [Read more about how it works](/advanced#how-it-works).
 
+::callout{icon="i-heroicons-exclamation-triangle" color="amber"}
+To improve performance, `@nuxt/fonts` by default only loads the normal/400 font-weight. See the [configuration docs](/get-started/configuration#styles) on how to change this default.
+::
+
 ::callout
 Check out the [configuration docs](/get-started/configuration) for all available options and features to customize.
 ::
@@ -98,3 +102,5 @@ If an error occurs during installation:
 - Check your network connection. Your machine might be having a hard time communicating with the font providers.
 
 - If none of the above worked, please [open an issue](https://github.com/nuxt/fonts/issues) and include the error trace, OS, Node version and the package manager used for installing.
+
+- If you're missing certain fonts or their variations, please confirm the module is [configured to load](/get-started/configuration#styles) the fonts you expected to see.
