--- a/docs/content/1.get-started/3.usage.md
+++ b/docs/content/1.get-started/3.usage.md
@@ -41,9 +41,13 @@ If the font name contains an invalid identifier (like a space character), you'll
 
 TailwindCSS v4 brings a [brand new way](https://tailwindcss.com/blog/tailwindcss-v4-alpha) for configuration. In v4 if you want to specify a font, you would use a CSS variable:
 
+::callout
+Please note that an update to TailwindCSS v4 --font-family-* variables to --font-* [read here](https://github.com/tailwindlabs/tailwindcss/pull/14885).
+::
+
 ```css [main.css]
 @theme {
-  --font-family-display: "Inter", "sans-serif";
+  --font-display: "Inter", "sans-serif";
 }
 ```
 
