docs: update tailwind v4 example (#410)

--- a/docs/content/1.get-started/3.usage.md
+++ b/docs/content/1.get-started/3.usage.md
@@ -43,7 +43,7 @@ TailwindCSS v4 brings a [brand new way](https://tailwindcss.com/blog/tailwindcss
 
 ```css [main.css]
 @theme {
-  --font-family-display: "Inter", "sans-serif";
+  --font-display: "Inter", "sans-serif";
 }
 ```
 
