docs: updates for `processCSSVariables`

--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -232,6 +232,26 @@ export default defineNuxtConfig({
 })
 ```
 
+## `processCSSVariables`
+
+You can enable support for processing CSS variables for font family names. 
+
+Available options: `true`, `false` or `font-prefixed-only`. Default is `font-prefixed-only`. Note that `true` might cause some performance impacts.
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  modules: ['@nuxt/fonts'],
+  fonts: {
+    // You can enable support for processing CSS variables for font family names.
+    processCSSVariables: true
+  }
+})
+```
+
+::callout
+If you previously set processCSSVariables to true for Tailwind v4 support, it is no longer needed or recommended in v0.11.0 and later.
+::
+
 ## `experimental`
 
 Defines whether to enable experimental features. All of them are `false` by default.
@@ -241,8 +261,6 @@ export default defineNuxtConfig({
   modules: ['@nuxt/fonts'],
   fonts: {
     experimental: {
-      // Required for TailwindCSS v4. You can enable support for processing CSS variables for font family names. This may have a performance impact.
-      processCSSVariables: true
       // Defines whether to enable adding local fallbacks. Default is `false`.
       disableLocalFallbacks: true
     }
