--- a/docs/content/1.get-started/3.usage.md
+++ b/docs/content/1.get-started/3.usage.md
@@ -37,7 +37,7 @@ export default {
 If the font name contains an invalid identifier (like a space character), you'll need to wrap it in quotes or escape the character manually. Read more [here](https://tailwindcss.com/docs/font-family#customizing-your-theme).
 ::
 
-### v4 (experimental)
+### v4
 
 TailwindCSS v4 brings a [brand new way](https://tailwindcss.com/blog/tailwindcss-v4-alpha) for configuration. In v4 if you want to specify a font, you would use a CSS variable:
 
@@ -47,21 +47,8 @@ TailwindCSS v4 brings a [brand new way](https://tailwindcss.com/blog/tailwindcss
 }
 ```
 
-As it uses CSS variables, you should enable the Nuxt Fonts `processCSSVariables` experimental feature to enable support for processing CSS variables for font family names:
-
-```ts [nuxt.config.ts]
-export default defineNuxtConfig({
-  modules: ['@nuxt/fonts'],
-  fonts: {
-    experimental: {
-      processCSSVariables: true,
-    },
-  }
-})
-```
-
 ::callout
-Please note that `processCSSVariables` is still an experimental feature and may have a performance impact.
+If you previously set `processCSSVariables` to `true` for Tailwind v4 support, it is no longer needed or recommended for v0.11.0 and above.
 ::
 
 ## UnoCSS
