add missing backtick

--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -249,7 +249,7 @@ export default defineNuxtConfig({
 ```
 
 ::callout
-If you previously set processCSSVariables to true for Tailwind v4 support, it is no longer needed or recommended in v0.11.0 and later.
+If you previously set `processCSSVariables` to `true` for Tailwind v4 support, it is no longer needed or recommended in v0.11.0 and later.
 ::
 
 ## `experimental`
