docs: add config for use with UnoCSS Wind4 preset

--- a/docs/content/1.get-started/3.usage.md
+++ b/docs/content/1.get-started/3.usage.md
@@ -65,3 +65,10 @@ export default defineConfig({
   },
 })
 ```
+
+If you're using the Wind4 (Tailwind4) preset, set `font` instead of `fontFamily`.
+```js
+    font: {
+      inter: 'Inter',
+    },
+```
