docs: use tailwind v3 url

--- a/docs/content/1.get-started/3.usage.md
+++ b/docs/content/1.get-started/3.usage.md
@@ -34,7 +34,7 @@ export default {
 ```
 
 ::callout
-If the font name contains an invalid identifier (like a space character), you'll need to wrap it in quotes or escape the character manually. Read more [here](https://tailwindcss.com/docs/font-family#customizing-your-theme).
+If the font name contains an invalid identifier (like a space character), you'll need to wrap it in quotes or escape the character manually. Read more [here](https://v3.tailwindcss.com/docs/font-family#customizing-your-theme).
 ::
 
 ### v4
