docs: add callout for variable font weight

--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -51,6 +51,10 @@ Default: `[400]`
 
 Defines the font-weights that should be downloaded for a font.
 
+::callout
+To specify a variable font weight, define the range as you would in plain CSS (eg. `100 900`).
+::
+
 #### `styles`
 
 Default: `['normal', 'italic']`
