chore!: set default font weight to `400 700`

--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -47,7 +47,7 @@ export default defineNuxtConfig({
 
 #### `weights`
 
-Default: `[400]`
+Default: `['400 700']`
 
 Defines the font-weights that should be downloaded for a font.
 
