chore: prefer `nuxt` to `nuxi`

--- a/docs/content/1.get-started/1.installation.md
+++ b/docs/content/1.get-started/1.installation.md
@@ -8,7 +8,7 @@ description: Get started with Nuxt Fonts right away.
 To get started, add `@nuxt/fonts` to your project:
 
 ```bash
-npx nuxi@latest module add fonts
+npx nuxt module add fonts
 ```
 
 ## Manual Installation
