--- a/docs/content/1.get-started/1.installation.md
+++ b/docs/content/1.get-started/1.installation.md
@@ -8,7 +8,7 @@ description: Get started with Nuxt Fonts right away.
 To get started, add `@nuxt/fonts` to your project:
 
 ```bash
-npx nuxt module add fonts
+npx nuxi@latest module add fonts
 ```
 
 ## Manual Installation
@@ -63,12 +63,12 @@ div {
 
 That's it! Nuxt Fonts will detect this and you should immediately see the web font loaded in your browser. [Read more about how it works](/advanced#how-it-works).
 
-::callout{icon="i-heroicons-exclamation-triangle" color="amber"}
-To improve performance, `@nuxt/fonts` by default only loads the normal/400 font-weight. See the [configuration docs](/get-started/configuration#styles) on how to change this default.
+::warning{to="/get-started/configuration#styles"}
+To improve performance, `@nuxt/fonts` by default only loads the normal/400 font-weight. See the *configuration docs* on how to change this default.
 ::
 
-::callout
-Check out the [configuration docs](/get-started/configuration) for all available options and features to customize.
+::note{to="/get-started/configuration"}
+Check out the *configuration docs* for all available options and features to customize.
 ::
 
 ## Troubleshooting
