--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -51,7 +51,7 @@ Default: `['400 700']`
 
 Defines the font-weights that should be downloaded for a font.
 
-::callout
+::tip
 To specify a variable font weight, define the range as you would in plain CSS (eg. `100 900`).
 ::
 
@@ -252,7 +252,7 @@ export default defineNuxtConfig({
 })
 ```
 
-::callout
+::tip
 If you previously set `processCSSVariables` to `true` for Tailwind v4 support, it is no longer needed or recommended in v0.11.0 and later.
 ::
 
