--- a/docs/content/1.get-started/3.usage.md
+++ b/docs/content/1.get-started/3.usage.md
@@ -12,7 +12,7 @@ div {
 }
 ```
 
-::callout
+::note
 Note that Nuxt Fonts will only generate CSS for the first font in a `font-family` declaration. Subsequent fonts in the list will be used to generate metrics for font fallbacks.
 ::
 
@@ -33,8 +33,8 @@ export default {
 }
 ```
 
-::callout
-If the font name contains an invalid identifier (like a space character), you'll need to wrap it in quotes or escape the character manually. Read more [here](https://v3.tailwindcss.com/docs/font-family#customizing-your-theme).
+::tip{to="https://v3.tailwindcss.com/docs/font-family#customizing-your-theme"}
+If the font name contains an invalid identifier (like a space character), you'll need to wrap it in quotes or escape the character manually.
 ::
 
 ### v4
@@ -47,7 +47,7 @@ TailwindCSS v4 brings a [brand new way](https://tailwindcss.com/blog/tailwindcss
 }
 ```
 
-::callout
+::tip
 If you previously set `processCSSVariables` to `true` for Tailwind v4 support, it is no longer needed or recommended for v0.11.0 and above.
 ::
 
