--- a/docs/content/3.contributing.md
+++ b/docs/content/3.contributing.md
@@ -3,7 +3,7 @@ title: Contributing
 description: We can never thank you enough for your contributions.
 ---
 
-::callout
+::warning
 It is highly recommended to read [the Nuxt contribution guide](https://nuxt.com/docs/community/contribution) before making any contributions.
 ::
 
