--- a/docs/content/1.get-started/4.providers.md
+++ b/docs/content/1.get-started/4.providers.md
@@ -13,8 +13,8 @@ The local provider deeply scans your `public/` directories (including of your la
 
 Then, when you use a `font-family` in your CSS, we check to see whether it matches one of these files. By default, we expect the font file to be the `400` weight, `normal` style, and `latin` subset. To indicate different weights and styles, please include that information in the filename. For example `comic-sans-ms.woff2` (400/normal/latin; defaults), `comic-sans-ms-700-italic-cyrillic.woff2` (700/italic/cyrillic). Keywords like `light`, `bold`, or `black` are accepted in place of a weight number: `comic-sans-ms-bold.woff2`. `font-family` values with spaces and/or caps will lookup hyphenated lowercase filenames as well, eg `font-family: 'Comic Sans MS'` will look for `comic-sans-ms.woff2` as well as `Comic\ Sans\ MS.woff2` on disk.
 
-::callout{type=warning}
-Please note that the local provider will only attempt to load styles and weights that were configured in the [Font Options](./2.configuration.md#font-options).
+::warning{to="/get-started/configuration#font-options"}
+Please note that the local provider will only attempt to load styles and weights that were configured in the *Font Options*.
 ::
 
 ### `google`
@@ -33,8 +33,8 @@ Please note that the local provider will only attempt to load styles and weights
 
 [Fontshare](https://www.fontshare.com/) is a free font service with 100+ professional-grade fonts from the Indian Type Foundry (ITF).
 
-::callout
-You should read [their terms in full](https://www.fontshare.com/licenses/itf-ffl) before using a font through `fontshare`.
+::warning{to="https://www.fontshare.com/licenses/itf-ffl"}
+You should read their terms in full before using a font through `fontshare`.
 ::
 
 ### `fontsource`
@@ -58,12 +58,12 @@ export default defineNuxtConfig({
 })
 ```
 
-::callout{type=warning}
+::warning
 We currently can't provide non-latin subsets for Adobe Fonts as they do not have a public API for that. Please use other providers in such cases.
 ::
 
-::callout{type=warning}
-You should read [their terms in full](https://www.adobe.com/legal/terms.html) before using a font through `adobe`.
+::warning{to="https://www.adobe.com/legal/terms.html"}
+You should read their terms in full before using a font through `adobe`.
 ::
 
 ## Custom Providers
