chore: prefer nuxt over nuxi

--- a/docs/content/1.get-started/1.installation.md
+++ b/docs/content/1.get-started/1.installation.md
@@ -8,7 +8,7 @@ description: Get started with Nuxt Fonts right away.
 To get started, add `@nuxt/fonts` to your project:
 
 ```bash
-npx nuxi@latest module add fonts
+npx nuxt module add fonts
 ```
 
 ## Manual Installation
@@ -96,7 +96,7 @@ If an error occurs during installation:
 - Try recreating your lock-file:
 
   ```bash
-  npx nuxt@latest upgrade --force
+  npx nuxt upgrade --force
   ```
 
 - Check your network connection. Your machine might be having a hard time communicating with the font providers.
