docs: add warning note about font-family in template
https://github.com/nuxt/fonts/issues/649

--- a/docs/content/1.get-started/3.usage.md
+++ b/docs/content/1.get-started/3.usage.md
@@ -16,6 +16,10 @@ div {
 Note that Nuxt Fonts will only generate CSS for the first font in a `font-family` declaration. Subsequent fonts in the list will be used to generate metrics for font fallbacks.
 ::
 
+::warning
+Inline styles with `font-family` within your `<template>` do currently not work; it only processes CSS stylesheets.
+::
+
 ## Tailwind CSS
 
 ### v3 and below
