feat: add `fonts:public-asset-context` hook (#758)

--- a/docs/content/2.advanced.md
+++ b/docs/content/2.advanced.md
@@ -43,3 +43,28 @@ Nuxt Fonts processes all your CSS and does the following things automatically wh
    ```
 
 1. **Include fonts in build.** When you build your project, we'll copy across all the fonts used in your project so you don't need to make any external requests when loading your site. (Any that haven't already been cached in development are downloaded at build time.) Font file names are hashed and Nuxt will serve them with long-lived cache headers.
+
+## Module Hooks
+
+Nuxt Fonts exposes hooks for module authors to extend functionality.
+
+### `fonts:providers`
+
+Add or modify font providers after all modules have loaded.
+
+```ts
+nuxt.hook('fonts:providers', (providers) => {
+  providers['my-provider'] = defineFontProvider(/* ... */)
+})
+```
+
+### `fonts:public-asset-context`
+
+Access the font resolution context, useful for modules that need font URLs during prerender (e.g., OG image generation).
+
+```ts
+nuxt.hook('fonts:public-asset-context', (context) => {
+// context.renderedFontURLs: Map<filename, sourceUrl>
+// Populated during vite build
+})
+```
