feat: add support for resolving fonts from local `node_modules`

--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -136,7 +136,7 @@ Defines whether to inject `@font-face` regardless of usage in project.
 
 Default: *None*
 
-Defines the provider that is used for the given font. You can choose any providers from `none`, `google`, `bunny`, `fontshare`, `fontsource`, `adobe`, `local`.
+Defines the provider that is used for the given font. You can choose any providers from `none`, `google`, `bunny`, `fontshare`, `fontsource`, `adobe`, `npm`, `local`.
 
 #### `src`
 
@@ -154,6 +154,7 @@ export default defineNuxtConfig({
   fonts: {
     google: {},
     local: {},
+    npm: {},
     adobe: {
       id: ['fontkitId1', 'fontkitId2'],
     }
