--- a/docs/content/1.get-started/4.providers.md
+++ b/docs/content/1.get-started/4.providers.md
@@ -41,6 +41,26 @@ You should read their terms in full before using a font through `fontshare`.
 
 [Fontsource](https://fontsource.org/docs/getting-started/introduction) is a collection of open-source fonts that are designed for self-hosting in web applications.
 
+### `npm`
+
+The npm provider resolves fonts from npm packages installed in your project's `node_modules`. It automatically detects known font packages (such as [`@fontsource/*`](https://fontsource.org/), [`@fontsource-variable/*`](https://fontsource.org/), and [`cal-sans`](https://github.com/calcom/font)) from your `package.json` dependencies and devDependencies.
+
+By default, fonts are resolved locally from disk (`remote: false`), so no CDN requests are made. This makes it a good choice for self-hosted fonts when you want to install font packages via npm and have them resolved at build time.
+
+```ts
+export default defineNuxtConfig({
+  modules: ['@nuxt/fonts'],
+  fonts: {
+    families: [
+      // Automatically resolved if @fontsource/roboto is in your package.json
+      { name: 'Roboto', provider: 'npm' },
+      // Variable fonts are also supported
+      { name: 'Inter Variable', provider: 'npm' },
+    ],
+  }
+})
+```
+
 ### `adobe`
 
 [Adobe Fonts](https://fonts.adobe.com/) is a font service for both personal and commercial use included with Creative Cloud subscriptions.
